--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,14 +59,15 @@ services:
       - PHP_DATE_TIMEZONE=America/Argentina/Cordoba
       - PHP_UPLOAD_MAX_FILESIZE=256M
       - PHP_POST_MAX_SIZE=256M
-      - APPLICATION_UID=1000    # UID de tu usuario "zeus"
-      - APPLICATION_GID=1000    # GID de tu usuario "zeus"
+      - APPLICATION_UID=1001    # UID de tu usuario "zeus"
+      - APPLICATION_GID=1001    # GID de tu usuario "zeus"
     volumes:
       - ./lucy:/app
     ports:
       - "8081:80"
   node:
     image: node:20
+    user: "1001:1001"    
     working_dir: /app
     volumes:
       - ./lucy:/app
@@ -74,6 +75,7 @@ services:
 
   composer:
     image: composer:2
+    user: "1001:1001"
     working_dir: /app
     volumes:
       - ./lucy:/app
