Fix docker- Lucy all in one

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   db:
     image: mariadb:10.11
@@ -51,39 +50,45 @@ services:
     ports:
       - "8082:80"
 
+  # === Lucy todo-en-uno (PHP + Composer + Node/Vite) ===
   lucy:
-    image: webdevops/php-apache-dev:8.2
+    build:
+      context: .
+      dockerfile: Dockerfile
     working_dir: /app
+    user: "10001:10001"
     environment:
       - WEB_DOCUMENT_ROOT=/app/public
       - PHP_DATE_TIMEZONE=America/Argentina/Cordoba
       - PHP_UPLOAD_MAX_FILESIZE=256M
       - PHP_POST_MAX_SIZE=256M
-      - APPLICATION_UID=10001
-      - APPLICATION_GID=10001
       - HOME=/home/app
       - COMPOSER_HOME=/home/app/.composer
       - COMPOSER_CACHE_DIR=/home/app/.composer/cache
     volumes:
       - ./lucy:/app
     ports:
-      - "8081:80"
+      - "8081:80"    # Apache (Laravel)
+      - "5173:5173"  # Vite dev (opcional)
 
-  composer:
-    image: composer:2
-    user: "1001:1001"
-    working_dir: /app
-    volumes:
-      - ./lucy:/app
-    command: ["sleep", "infinity"]
-
-  node:
-    image: node:20
-    working_dir: /app
-    user: "10001:10001"
-    environment:
-      - HOME=/home/app
-    volumes:
-      - ./lucy:/app
-    command: ["sleep", "infinity"]
-
+  # Los siguientes servicios ya no son necesarios con 'lucy' unificado.
+  # Si los dejás, mantenelos apagados:
+  # composer:
+  #   image: composer:2
+  #   user: "10001:10001"
+  #   working_dir: /app
+  #   environment:
+  #     - HOME=/home/app
+  #   volumes:
+  #     - ./lucy:/app
+  #   command: ["sleep", "infinity"]
+  #
+  # node:
+  #   image: node:20
+  #   working_dir: /app
+  #   user: "10001:10001"
+  #   environment:
+  #     - HOME=/home/app
+  #   volumes:
+  #     - ./lucy:/app
+  #   command: ["sleep", "infinity"]
